tests/errors/syn_class_var6.java
public class syn_class_var6 {
public static String name
}